# qudec

./: .gitignore  CMakeLists.txt
PyMatching/: CMakeLists.txt
PyMatching/src/pymatching/sparse_blossom/matcher/: mwpm.cc
blossom5/: CMakeLists.txt  LCA.h  PMduals.cpp  PMexpand.cpp  PMimplementation.h  PMinit.cpp  PMinterface.cpp  PMmain.cpp  PMrepair.cpp  PMshrink.cpp  PQ.h  PerfectMatching.h  block.h  misc.cpp  timer.h
blossom5/GEOM/: GPMinit.cpp  GPMinterface.cpp  GPMkdtree.cpp  GPMkdtree.h  GPMmain.cpp  GeomPerfectMatching.h
blossom5/MinCost/: MinCost.cpp  MinCost.h
main/: qudec.cpp  qudec_sc_epr.cpp  qudec_sliding_window.cpp
src/: decoder_eval.h  decoder_eval.tpp  decoding_graph.cpp  decoding_graph.h  gen.cpp  gen.h  globals.cpp  hypergraph.h  hypergraph.tpp  qudec_common.h
src/decoder/: common.h  epr_pym.cpp  epr_pym.h  fpd.h  fpd.tpp  promatch.h  promatch.tpp  sliding_pym.cpp  sliding_pym.h  surface_code.cpp  surface_code.h
src/graph/: distance.h  distance.tpp
src/io/: dem.cpp  dem.h
src/sc/: blossom5.h
stim/: CMakeLists.txt
